Moved more Groovy unit test files to Java.